# tt-rqm-kernels

./: .gitattributes  .gitignore  CONTACT.md  LICENSE  README.md  plan.md  pyproject.toml
benchmarks/: qmatvec_benchmark.py  qmul_throughput.py  qrotate_stream.py  wave_phase_mix.py
docs/: collaboration-map.md  complex-quaternion-bridge.md  external-tenstorrent-contribution-selection.md  future-physical-ai-state-integrity.md  hamiltonian-evolution-roadmap.md  hamiltonian-lowering-h2a-designated-runbook.md  index.md  issue-17-hardware-evidence-comment.md  operator-contracts.md  phase-update-tenstorrent-plan.md  physical-ai-pose-stream-demo.md  quantum-ir-operator-mapping.md  quantum-ir-roadmap.md  quantum-ir.md  rqm-technical-canon-v2.md  stage-b-stability-methodology.md  structured-qmul-tutorial.md  structuredbench-hpc-expansion-roadmap.md  structuredbench-opportunity-plan.md  structuredbench-spec.md  structuredbench.md  su2-stability-methodology-v3.md  su2-stability-methodology.md  tenstorrent-backend-roadmap.md  tenstorrent-cloud-access-plan.md  tenstorrent-console-access-plan.md  tenstorrent-console-copy-paste.md  tenstorrent-delegated-validation.md  tenstorrent-engineer-copy-paste-packet.md  tenstorrent-execution-runbook.md  tenstorrent-functional-quickstart.md  tenstorrent-hardware-command-contract.md  tenstorrent-landing.md  tenstorrent-rfc.md  tenstorrent-value-proposition.md  thesis.md  tt-emule-qmul-validation-plan.md  tt-lang-qmul-plan.md  tt-metalium-qmul-design.md  tt-mlir-fused-lowering-prerequisites.md
examples/: graphics_rotation_stream.py  physical_ai_pose_stream.py  robotics_pose_update.py  tenstorrent_qmul_quickstart.py  wave_simulation_step.py  wireless_phase_tracking.py
experimental/tt_metalium_hamiltonian_evolution/: CMakeLists.txt  README.md  build_candidate.py  check_environment.py  run_candidate.py
experimental/tt_metalium_hamiltonian_evolution/kernels/: reader_hamiltonian_lowering_step_major.cpp  writer_hamiltonian_lowering_step_major.cpp
experimental/tt_metalium_hamiltonian_evolution/src/: hamiltonian_evolution_candidate.cpp
experimental/tt_metalium_hamiltonian_lowering/: CMakeLists.txt  README.md  audit_pinned_tt_metal.py  build_candidate.py  check_environment.py  run_candidate.py
experimental/tt_metalium_hamiltonian_lowering/src/: hamiltonian_lowering_candidate.cpp
experimental/tt_metalium_hamiltonian_lowering/src/kernels/: compute_hamiltonian_lowering.cpp  h2a_sfpu.h  primitive_probe_hamiltonian_lowering.cpp  reader_hamiltonian_lowering.cpp  writer_hamiltonian_lowering.cpp
experimental/tt_metalium_hamiltonian_lowering_compensated/: CMakeLists.txt  README.md  SOURCE_INVENTORY.md  build_candidate.py  development_probe.py  run_candidate.py
experimental/tt_metalium_hamiltonian_lowering_compensated/kernels/: compute_hamiltonian_lowering_compensated.cpp  compute_hamiltonian_lowering_original_trig_diagnostic.cpp  compute_hamiltonian_lowering_product_diagnostic.cpp  compute_hamiltonian_lowering_trig_diagnostic.cpp  compute_hamiltonian_lowering_value_diagnostic.cpp  h2a_compensated_diagnostic_kernel.h  h2a_compensated_sfpu.h  primitive_probe_hamiltonian_lowering_compensated.cpp
experimental/tt_metalium_qmul/: CMakeLists.txt  README.md  build_candidate.py  check_environment.py  run_candidate.py  run_candidate_docker.sh  validate_candidate.py
experimental/tt_metalium_qmul/kernels/: qmul_multicore_compute.cpp  qmul_multicore_reader.cpp  qmul_multicore_writer.cpp  qmul_riscv.cpp  qmul_sfpu.h
experimental/tt_metalium_qmul/src/: qmul_candidate.cpp  qmul_multicore_candidate.cpp  qmul_multicore_persistent_candidate.cpp
experimental/tt_metalium_su2_compose/: CMakeLists.txt  README.md  build_candidate.py
experimental/tt_metalium_su2_compose/kernels/: su2_compute_common.h  su2_fused_compute.cpp  su2_fused_reader.cpp  su2_fused_writer.cpp  su2_sfpu.h  su2_unfused_compute.cpp  su2_unfused_reader.cpp  su2_unfused_writer.cpp
experimental/tt_metalium_su2_compose/src/: su2_compose_candidate.cpp
reports/: h2b_clean_build_reproduction.json  h2b_clean_build_reproduction.md  h2b_large_angle_diagnostic.json  h2b_large_angle_diagnostic.md  h2b_n300_pilot_blocker.json  h2b_n300_pilot_blocker.md  h2b_n300_pilot_session_2_blocker.json  h2b_n300_pilot_session_2_blocker.md  h2b_n300_session2_preflight.json  hamiltonian-evolution-h2b-pilot-session-2.md  hamiltonian-evolution-h2b-pilot.md  structuredbench_latest.json  structuredbench_latest.md  tenstorrent_hardware_report_template.md  tenstorrent_packet.md  tt_emule_qmul_candidate.json  tt_emule_qmul_candidate.md  tt_hardware_qmul_environment.txt  tt_hardware_qmul_quickstart.json  tt_hardware_qmul_quickstart.md  tt_hardware_qmul_stage_b_architecture_audit.md  tt_hardware_qmul_stage_b_candidate_conformance.json  tt_hardware_qmul_stage_b_candidate_conformance.md  tt_hardware_qmul_stage_b_internal_review.md  tt_hardware_qmul_stage_b_performance.json  tt_hardware_qmul_stage_b_performance.md  tt_hardware_qmul_stage_b_persistent_conformance.json  tt_hardware_qmul_stage_b_persistent_conformance.md  tt_hardware_qmul_stage_b_persistent_environment.txt  tt_hardware_qmul_stage_b_persistent_performance.json  tt_hardware_qmul_stage_b_persistent_performance.md  tt_hardware_qmul_stage_b_persistent_timing_audit.md  tt_hardware_su2_compose_architecture_audit.md  tt_hardware_su2_compose_conformance.json  tt_hardware_su2_compose_conformance.md  tt_hardware_su2_compose_eligibility_audit.md  tt_hardware_su2_compose_eligible_conformance.json  tt_hardware_su2_compose_eligible_conformance.md  tt_hardware_su2_compose_eligible_environment.txt  tt_hardware_su2_compose_environment.txt  (+6 more)
scripts/: assess_su2_compose_v3_pilots.py  collect_hamiltonian_evolution_h2b_pilot.py  collect_hamiltonian_lowering_h2a_designated.py  collect_hamiltonian_lowering_pilot.py  collect_su2_compose_profile.py  collect_su2_compose_v3_designated.py  collect_su2_compose_v3_pilot.py  freeze_hamiltonian_evolution_pilot_contract.py  freeze_hamiltonian_lowering_designated_inputs.py  generate_benchmark_plots.py  generate_h2b_large_angle_diagnostic.py  repo_status.py  (+49 more)
(+1119 files in other folders)
