[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-rqm-kernels"
version = "0.1.0"
description = "Structured quaternion and rotor kernels for Tenstorrent hardware"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "RQM Technologies LLC" }
]
dependencies = [
  "torch>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
include = ["tt_rqm_kernels*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
