[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-rqm-kernels"
version = "0.1.0"
description = "Structured quaternion and rotor kernels for Tenstorrent hardware"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "RQM Technologies LLC" }
]
dependencies = [
  "torch>=2.0"
]

[project.optional-dependencies]
dev = [
  "matplotlib==3.10.1",
  "pytest>=8.0",
  "ruff==0.15.17"
]
benchmark = [
  "matplotlib==3.10.1"
]

[tool.setuptools.packages.find]
include = ["tt_rqm_kernels*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
extend-exclude = [
  "benchmarks/raw",
  "experimental/**/build*",
  "reports"
]

[tool.ruff.lint]
# These legacy layout rules require a separate formatting-only migration.
ignore = ["E402", "E701", "E702", "E731"]
